tests/compile_fail/state/attr_not_on_impl.rs
mod blinky {
    use moku::*;

    #[superstate(Top)]
    struct Bottom;
}

fn main() {}
